# debian-binfmt-support

./: .gitignore-rename  ChangeLog  ChangeLog-2013  Makefile.am  Makefile.in  NEWS  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  detectors  run-detectors.pl  update-binfmts.8  update-binfmts.pl
Binfmt/: Format.pm  Lib.pm
debian/: .git-dpm  changelog  control  copyright  dirs  docs  init.d  install  manpages  postinst  postrm  rules  source.lintian-overrides  watch
doc/: Makefile.am  Makefile.in
gnulib/lib/: Makefile.am  Makefile.in
gnulib/m4/: gnulib-cache.m4  gnulib-comp.m4
init/: Makefile.am  Makefile.in
init/openrc/: Makefile.am  Makefile.in  binfmt-support.in
init/systemd/: Makefile.am  Makefile.in  binfmt-support.service.in
init/sysvinit/: Makefile.am  Makefile.in  binfmt-support.in
init/upstart/: Makefile.am  Makefile.in  binfmt-support.conf.in
man/: Makefile.am  Makefile.in  update-binfmts.8  update-binfmts.man8
src/: Makefile.am  Makefile.in  error.c  error.h  find.c  find.h  format.c  format.h  kvhash.c  kvhash.h  paths.c  paths.h  run-detectors.c  update-binfmts.c
src/tests/: Makefile.am  Makefile.in  binfmt_misc.py  detectors  display  enable  find  import  install  testlib.sh
